ghost-clone/ghost-app/ingress-ghost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: example/ghost-app
  name: ghost-app
  namespace: example
  labels:
    app.kubernetes.io/name: ghost-app
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|Ingress|example|ghost-app'
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: ghost-app
            port:
              number: 80
        pathType: Prefix
        path: /
